--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script defer src="./static/js/account_dropdown.js"></script>
         <script defer src="./static/js/burger_menu_dropdown.js"></script>
 
-        <title>TSEC CodeCell</title>
+        <title>Complaint Portal</title>
     </head>
 
     <body>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="logo">
-                    <a href="#"><img src="./static/img/codecell_logo.svg" alt="TSEC CodeCell"></a>
+                    <a href="#"><img src="./static/img/codecell_logo.svg" alt="CP"></a>
                 </div>
     
                 <ul class="navbar-main-ul hide-burger-menu burger-menu-dropdown">
@@ -95,9 +95,9 @@
         </main>
 
         <footer>
-            <a href="#" target="_blank"><img class="social-media-img" src="./static/img/social_media/facebook.svg" alt="Facebook"></a>
-            <a href="#" target="_blank"><img class="social-media-img" src="./static/img/social_media/github.svg" alt="GitHub"></a>
-            <a href="#" target="_blank"><img class="social-media-img" src="./static/img/social_media/instagram.svg" alt="Instagram"></a>
+            <a href="https://www.facebook.com/bengaltigers.ankur" target="_blank"><img class="social-media-img" src="./static/img/social_media/facebook.svg" alt="Facebook"></a>
+            <a href="https://github.com/ankursaroj90/" target="_blank"><img class="social-media-img" src="./static/img/social_media/github.svg" alt="GitHub"></a>
+            <a href="https://www.instagram.com/ankursaroj90/" target="_blank"><img class="social-media-img" src="./static/img/social_media/instagram.svg" alt="Instagram"></a>
  
             <a href="#"><img class="codecell-img" src="./static/img/codecell_logo.svg" alt="TSEC CodeCell"></a>
  
