--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="codecell, tsec, contact, contact us, harsh kapadia, html, css, js, vanilla css">
-        <meta name="description" content="A static contact us page for TSEC CodeCell by Harsh Kapadia">
-        <meta name="author" content="Harsh Kapadia">
+        <meta name="keywords" content="contact, contact us, ankur saroj, html, css, js, vanilla css">
+        <meta name="description" content="A static page for Complaint Portal by Ankur Saroj">
+        <meta name="author" content="Ankur Saroj">
 
         <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./static/css/base.css">
