--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
                 </div>
 
                 <div class="logo">
-                    <a href="#"><img src="./static/img/codecell_logo.svg" alt="CP"></a>
+                    <a href="#"><img src="./static/img/OIP (1).jpeg" alt="CP"></a>
                 </div>
     
                 <ul class="navbar-main-ul hide-burger-menu burger-menu-dropdown">
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About</li></a>
                     <a href="#"><li>Challenges</li></a>
-                    <a href="#"><li>Ranklist</li></a>
-                    <a href="#"><li>TSEC Hacks</li></a>
                     <a href="#"><li>Contact Us</li></a>
                 </ul>
             </div>
@@ -64,8 +62,8 @@
         </nav>
 
         <main>
-            <div class="title">Contact us</div>
-            <div class="title-info">We'll get back to you soon!</div>
+            <div class="title">Complaint Portal</div>
+            <div class="title-info">Street Light Control Office</div>
 
             <form action="mailto:kumar78178ankur@gmail.com" method="post" class="form">
                 <div class="input-group">
